--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
     <section class="footer colored">
         
         <div class="business-info">
-            <div class="logo"><a href="../index.html"><img src="../images/icon.png" alt=""><span>SVH <p>Estd. 1989</p></span></a>
+            <div class="logo"><a href="../index.html"><img src="images/icon.png" alt=""><span>SVH <p>Estd. 1989</p></span></a>
             </div>
             <div class="address">
                 <i class="fas fa-map-marker-alt"></i>
