--- a/pages/login.html
+++ b/pages/login.html
@@ -26,7 +26,7 @@
                 <li><a href="checkout.html"><i class="fas fa-shopping-cart"></i></a></li>
                 <li>  
                     <div class="search-bar">
-                        <input type="text" placeholder="Search Products">
+                        <input data-filled='false' type="text" placeholder="Search Products">
                         <button id="search-btn"><i class="fas fa-search"></i></button>
                     </div>
                 </li>
@@ -60,11 +60,11 @@
                 <p>or</p>
 
                 <div class="form-control">
-                    <input id="email" type="email" required autofocus autocomplete="off">
+                    <input data-filled='false' id="email" type="email" required autofocus autocomplete="off">
                     <label for="email">Email</label>
                 </div>
                 <div class="form-control">
-                    <input id="password" type="Password" required>
+                    <input data-filled='false' id="password" type="Password" required>
                     <label for="password">Password</label>
                 </div>
 
@@ -82,22 +82,22 @@
                 <p>or</p>
 
                 <div class="form-control">
-                    <input id="name" name="Full Name" type="text" required autofocus autocomplete="off">
+                    <input data-filled='false' id="name" name="Full Name" type="text" required autofocus autocomplete="off">
                     <label for="name">Full Name</label>
                 </div>
                 <span id="errorname"></span>
                 <div class="form-control">
-                    <input name="Email" id="email" type="email" required autocomplete="off">
+                    <input data-filled='false' name="Email" id="email" type="email" required autocomplete="off">
                     <label for="email">Email</label>
                 </div>
                 <span id="erroremail"></span>
                 <div class="form-control">
-                    <input name='Password' id="password" type="Password" required>
+                    <input data-filled='false' name='Password' id="password" type="Password" required>
                     <label for="password">Password</label>
                 </div>
                 <span id="errorpassword"></span>
                 <div class="form-control">
-                    <input name="confPassword" id="re-password" type="Password" required>
+                    <input data-filled='false' name="confPassword" id="re-password" type="Password" required>
                     <label for="password">Confirm password</label>
                 </div>
 
@@ -136,7 +136,7 @@
         <div class="copywright">©<div class="link"><a href="https://krituraj-anand.vercel.app" rel="noreferrer" target="_blank"><strong>Krituraj Anand</strong></a></div> 2021.</div>
     </section>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" referrerpolicy="no-referrer"></script> -->
     <script src="../utils.js"></script>
     <script src="./scripts/login.js"></script>
 </body>
